# sunday

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  api_server.py  build_product_index.py  docker-compose.yml  eval_retrieval.py  multiagent_chatbot.py  pydantic_connection_test.py  pyproject.toml  rag_chatbot.py  requirements.txt  scrape_sunday_product_dynamic_v6.py  scrape_sunday_shop_all.py  update_product_urls.py
.github/: copilot-instructions.md
data/eval/: retrieval_cases.json
data/json/: 5-black-hyde-planter.json  5-hyde-planter-cream.json  7-cream-hyde-planter.json  all-purpose-organic-garden-nutrients-2-lb.json  anise-tree.json  ant-adios-insect-and-ant-killer-2-pack.json  ant-adios.json  apple-tree-scarlet-sentinel-bare-root.json  arabian-jasmine.json  august-beauty-gardenia.json  backyard-pest-protection-pack.json  bare-repair-bermudagrass-3-in-1-patch-2-pack.json  bare-repair-bermudagrass-3-in-1-patch.json  bare-repair-sun-shade-bag.json  bare-repair-sun-shade-lawn-treatment-grass-seed-bag-2-pack.json  bermuda-grass-seed-weed-kit.json  bermuda-time-bermuda-grass-seed-2-pack.json  bermuda-time-bermuda-grass-seed-3-pack.json  bermuda-time-bermuda-grass-seed.json  bermudagrass-patch-kit-for-lawns.json  (+203 more)
scripts/: build_product_index.py  docker_entrypoint.sh  eval_retrieval.py  multiagent_chatbot.py  rag_chatbot.py  scrape_sunday_product.py  scrape_sunday_shop_all.py  update_product_urls.py
src/: agent.py  api_server.py  base_agent.py  chat_runtime.py  models.py  multiagent.py  retriever.py  settings.py  tools.py  vision.py
(+9 files in other folders)
